<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg_style">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:text="@string/ask_permission"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:layout_marginHorizontal="24dp"
        android:text="@string/permission_and_turn_files_and_media_on1"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:layout_marginHorizontal="24dp"
        android:text="@string/permission_and_turn_files_and_media_on"
        tools:ignore="SpUsage" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAskPermission"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:rippleColor="@color/bg_transparent"
        android:layout_marginVertical="24dp"
        android:textColor="@color/main_color"
        android:textSize="18dp"
        app:cornerRadius="16dp"
        android:text="@string/give_permission"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/white"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvCloseApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFC107"
        android:textSize="18dp"
        android:clickable="true"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/ripple_effect"
        android:gravity="start"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:text="@string/close_app"
        tools:ignore="SpUsage" />



</LinearLayout>